# Personal_Nav2_Robot

./: .gitignore  frames_2026-01-30_16.22.13.gv  frames_2026-01-30_16.26.00.gv  frames_2026-02-01_18.36.40.gv  frames_2026-02-01_18.47.47.gv  frames_2026-02-02_18.47.51.gv  frames_2026-02-02_19.03.00.gv  frames_2026-02-03_16.57.17.gv  frames_2026-02-03_17.31.01.gv  frames_2026-02-03_20.15.56.gv  frames_2026-02-09_18.00.37.gv
src/: README.md
src/my_hybrid_astar_planner/: CMakeLists.txt  package.xml  plugins.xml
src/my_hybrid_astar_planner/include/my_hybrid_astar_planner/: hybrid_astar_planner.hpp
src/my_hybrid_astar_planner/src/: hybrid_astar_planner.cpp
src/my_mpc_controller/: CMakeLists.txt  package.xml  plugins.xml
src/my_mpc_controller/include/my_mpc_controller/: mpc_controller.hpp
src/my_mpc_controller/src/: mpc_controller.cpp
src/my_nav2_controller/: CMakeLists.txt  package.xml  plugins.xml
src/my_nav2_controller/include/my_nav2_controller/: dwa_controller.hpp
src/my_nav2_controller/src/: dwa_controller.cpp
src/my_nav2_planner/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/my_nav2_planner/include/my_nav2_planner/: astar_planner.hpp  rrtstar_planner.hpp
src/my_nav2_planner/src/: astar_planner.cpp  rrtstar_planner.cpp
src/my_nav2_robot/: CMakeLists.txt  package.xml
src/my_nav2_robot/behavior_trees/: test_nav.xml
src/my_nav2_robot/config/: nav2_config.rviz  nav2_params.yaml  nav2_params2.yaml  nav2_params_nav.yaml  nav2_params_nav_diy.yaml  nav2_params_slam.yaml  nav2_params（1）.yaml
src/my_nav2_robot/launch/: full_navigation.launch.py  gazebo_sim.launch.py  test.launch.py
src/my_nav2_robot/maps/: map1.yaml
src/my_nav2_robot/src/: odom_evaluator.cpp  odom_evaluator.hpp  robot_driver.cpp  robot_driver.hpp  trajectory_saver.py
src/my_nav2_robot/urdf/: debug.urdf  robot.urdf  robot.urdf.xacro
src/my_nav2_smoother/: CMakeLists.txt  Plan.md  package.xml  plugins.xml
src/my_nav2_smoother/include/my_nav2_smoother/: bspline_smoother.hpp  gradient_smoother.hpp
src/my_nav2_smoother/src/: bspline_smoother.cpp  gradient_smoother.cpp
src/my_rrtstar_planner/: CMakeLists.txt  package.xml  plugins.xml
src/my_rrtstar_planner/include/my_rrtstar_planner/: rrtstar_planner.hpp
src/my_rrtstar_planner/src/: rrtstar_planner.cpp
src/my_teb_controller/: CMakeLists.txt  PLAN.md  package.xml  plugins.xml
src/my_teb_controller/cmake/: FindG2O.cmake  Findg2o.cmake
src/my_teb_controller/include/my_teb_controller/: teb_controller.hpp  teb_edges.hpp  teb_graph_optimizer.hpp  teb_types.hpp  teb_vertices.hpp
src/my_teb_controller/src/: teb_controller.cpp  teb_graph_optimizer.cpp
src/nav2_visual_processing/: CMakeLists.txt  package.xml
src/nav2_visual_processing/include/nav2_visual_processing/: visual_processor.hpp
src/nav2_visual_processing/src/: visual_processor.cpp
src/rm_interfaces/: CMakeLists.txt  package.xml
